--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,8 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'client', include: '*.jar')
-    compile fileTree(dir: 'client/lib', include: '*.jar')
     compile group: 'com.google.inject', name: 'guice', version: '4.0'
+    compile group: 'com.scalar-labs', name: 'scalardl-client-sdk', version: '1.0.0-alpha.20190222'
 }
 
 application {
