--- a/client.properties
+++ b/client.properties
@@ -1,8 +1,9 @@
-scalar.ledger.client.server_host=localhost
-scalar.ledger.client.server_port=50051
-scalar.ledger.client.cert_holder_id=plenty.su
-scalar.ledger.client.cert_path=cert.pem
-scalar.ledger.client.cert_version=1
-scalar.ledger.client.private_key_path=key.pem
-scalar.ledger.client.tls.enabled=false
-scalar.ledger.client.authorization.credential=
+scalar.dl.client.server_host=localhost
+scalar.dl.client.server_port=50051
+scalar.dl.client.server.privileged_port=50052
+scalar.dl.client.cert_holder_id=plenty.su
+scalar.dl.client.cert_path=fixture/client.cert
+scalar.dl.client.cert_version=1
+scalar.dl.client.private_key_path=fixture/client.key
+scalar.dl.client.tls.enabled=false
+scalar.dl.client.tls.ca_root_cert_pem=
