--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       - CASSANDRA_DC=dc1
       - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
 
-  scalardl-schema-loader-cassandra:
+  scalardl-schema-loader:
     image: ghcr.io/scalar-labs/scalardl-schema-loader:3.0.0
-    container_name: scalardl-schema-loader-cassandra
+    container_name: scalardl-schema-loader
     command:
       - "--cassandra"
       - "-h"
